--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
   </header>
   <main>
     <section class="headline">
-      <h1>Hey there. I'm Edu<span>I'm a software developer</span></h1>
+      <h1>Hey there. I'm Edu<span><h2>I'm a software developer</h2></span></h1>
       <p>I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
         don't hestiate to contact me.</p>
       <div class="social-media">
         <ul>
-          <li><a tabindex="0" class="icon-box" href="https://github.com/Xecyc"><img class="media-img" src="/img/social media icons/Icon -GitHub.svg" alt="github-icon"></a></li>
-          <li><a tabindex="0" class="icon-box" href="https://twitter.com/jesm0r"><img class="media-img" src="/img/social media icons/Icon - Twitter.svg" alt="twitter-icon"></a></li>
-          <li><a tabindex="0" class="icon-box" href="https://www.linkedin.com/in/jes%C3%BAs-moreno-b4276a178/"><img class="media-img" src="/img/social media icons/Icon - Linkedinlinkedin.svg" alt="linkedin-icon"></a></li>
-          <li><a tabindex="0"class="icon-box" href="https://medium.com/"><img class="media-img" src="/img/social media icons/Icon - Medium.svg" alt="medium-icon"></a></li>
-          <li><a tabindex="0" class="icon-box" href="https://angel.co/"><img class="media-img" src="/img/social media icons/Icon - Angelist.svg" alt="angelist-icon"></a></li>
+          <li><a tabindex="0" class="icon-box" href="https://github.com/Xecyc"><img class="media-img" src="./img/social media icons/Icon -GitHub.svg" alt="github-icon"></a></li>
+          <li><a tabindex="0" class="icon-box" href="https://twitter.com/jesm0r"><img class="media-img" src="./img/social media icons/Icon - Twitter.svg" alt="twitter-icon"></a></li>
+          <li><a tabindex="0" class="icon-box" href="https://www.linkedin.com/in/jes%C3%BAs-moreno-b4276a178/"><img class="media-img" src="./img/social media icons/Icon - Linkedinlinkedin.svg" alt="linkedin-icon"></a></li>
+          <li><a tabindex="0"class="icon-box" href="https://medium.com/"><img class="media-img" src="./img/social media icons/Icon - Medium.svg" alt="medium-icon"></a></li>
+          <li><a tabindex="0" class="icon-box" href="https://angel.co/"><img class="media-img" src="./img/social media icons/Icon - Angelist.svg" alt="angelist-icon"></a></li>
         </ul>
       </div>
     </section>
