Fix html error, ham menu icon was not showing

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="navbar">
       <a href="#" class="brand-name">Edu</a>
       <nav class="ham-menu">
-        <a href="#"><img tabindex="0" src="/img/Unionham.svg" alt="hamburger-menu-icon" class="ham-img"></a>
+        <a href="#"><img tabindex="0" src="./img/Unionham.svg" alt="hamburger-menu-icon" class="ham-img"></a>
       </nav>
     </div>
   </header>
