Remove works-section div and add grid display to works-container div

--- a/index.html
+++ b/index.html
@@ -37,70 +37,80 @@
       </div>
     </section>
     <section class="works-container">
-      <div class="works-section">
-        <h1>My recent works</h1>
-        <hr>
-        <img class="img-placeholder" src="./img/placeholders/Img Placeholder.png" alt="placeholder-image" width="327" height="237">
-        <div class="works-stories">
-          <h1>Multi-Post Stories</h1>
-          <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
-          <div class="languages-box">
-            <ul class="languages-list">
-              <li class="area-1">css</li>
-              <li class="area-2">html</li>
-              <li class="area-3">bootstrap</li>
-              <li class="area-4">Ruby</li>
-              <li class="btn-area"><a tabindex="0" href="#" class="btn">See Project</a></li>
-            </ul>
-          </div>
+      <h1>My recent works</h1>
+      <hr>
+      <img class="img-placeholder" src="./img/placeholders/Img Placeholder.png" alt="placeholder-image" width="327" height="237">
+      <div class="works-stories">
+        <h1>Multi-Post Stories</h1>
+        <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
+        <div class="languages-box">
+          <ul class="languages-list">
+            <li class="area-1">css</li>
+            <li class="area-2">html</li>
+            <li class="area-3">bootstrap</li>
+            <li class="area-4">Ruby</li>
+            <li class="btn-area"><a tabindex="0" href="#" class="btn">See Project</a></li>
+          </ul>
         </div>
-        <div class="project-box" id="project-1">
-          <div class="project-content">
-            <h1>Profesional Art Printing Data</h1>
-            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
-            <ul>
-              <li class="list-area area-1">html</li>
-              <li class="list-area area-2">bootstrap</li>
-              <li class="list-area area-3">Ruby</li>
-            </ul>
-            <div class="large-btn-area"><a tabindex="0" class="btn" href="#">See Project</a></div>
-          </div>
+      </div>
+      <div class="project-box" id="project-1">
+        <div class="project-content">
+          <h1>Profesional Art Printing Data</h1>
+          <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+          <ul>
+            <li class="list-area area-1">html</li>
+            <li class="list-area area-2">bootstrap</li>
+            <li class="list-area area-3">Ruby</li>
+          </ul>
+          <a tabindex="0" class="large-btn-area btn" href="#">See Project</a>
         </div>
-        <div class="project-box" id="project-2">
-          <div class="project-content">
-            <h1>Profesional Art Printing Data</h1>
-            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
-            <ul>
-              <li class="list-area area-1">html</li>
-              <li class="list-area area-2">bootstrap</li>
-              <li class="list-area area-3">Ruby</li>
-            </ul>
-            <div class="large-btn-area"><a tabindex="0" class="btn" href="#">See Project</a></div>
-          </div>
+      </div>
+      <div class="project-box" id="project-1">
+        <div class="project-content">
+          <h1>Profesional Art Printing Data</h1>
+          <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+          <ul>
+            <li class="list-area area-1">html</li>
+            <li class="list-area area-2">bootstrap</li>
+            <li class="list-area area-3">Ruby</li>
+          </ul>
+          <a tabindex="0" class="large-btn-area btn" href="#">See Project</a>
         </div>
-        <div class="project-box" id="project-3">
-          <div class="project-content">
-            <h1>Profesional Art Printing Data</h1>
-            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
-            <ul>
-              <li class="list-area area-1">html</li>
-              <li class="list-area area-2">bootstrap</li>
-              <li class="list-area area-3">Ruby</li>
-            </ul>
-            <div class="large-btn-area"><a tabindex="0" class="btn" href="#">See Project</a></div>
-          </div>
+      </div>
+      <div class="project-box" id="project-2">
+        <div class="project-content">
+          <h1>Profesional Art Printing Data</h1>
+          <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+          <ul>
+            <li class="list-area area-1">html</li>
+            <li class="list-area area-2">bootstrap</li>
+            <li class="list-area area-3">Ruby</li>
+          </ul>
+          <a tabindex="0" class="large-btn-area btn" href="#">See Project</a>
         </div>
-        <div class="project-box" id="project-4">
-          <div class="project-content">
-            <h1>Profesional Art Printing Data</h1>
-            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
-            <ul>
-              <li class="list-area area-1">html</li>
-              <li class="list-area area-2">bootstrap</li>
-              <li class="list-area area-3">Ruby</li>
-            </ul>
-            <div class="large-btn-area"><a tabindex="0" class="btn" href="#">See Project</a></div>
-          </div>
+      </div>
+      <div class="project-box" id="project-3">
+        <div class="project-content">
+          <h1>Profesional Art Printing Data</h1>
+          <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+          <ul>
+            <li class="list-area area-1">html</li>
+            <li class="list-area area-2">bootstrap</li>
+            <li class="list-area area-3">Ruby</li>
+          </ul>
+          <a tabindex="0" class="large-btn-area btn" href="#">See Project</a>
+        </div>
+      </div>
+      <div class="project-box" id="project-4">
+        <div class="project-content">
+          <h1>Profesional Art Printing Data</h1>
+          <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+          <ul>
+            <li class="list-area area-1">html</li>
+            <li class="list-area area-2">bootstrap</li>
+            <li class="list-area area-3">Ruby</li>
+          </ul>
+          <a tabindex="0" class="large-btn-area btn" href="#">See Project</a>
         </div>
       </div>
     </section>
