Update project technologies box text to follow the proper syntax

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
         <div class="languages-box">
           <ul class="languages-list">
-            <li class="area-1">css</li>
-            <li class="area-2">html</li>
-            <li class="area-3">bootstrap</li>
+            <li class="area-1">CSS</li>
+            <li class="area-2">HTML</li>
+            <li class="area-3">Bootstrap</li>
             <li class="area-4">Ruby</li>
             <li class="btn-area"><a tabindex="0" href="#" class="btn">See Project</a></li>
           </ul>
@@ -58,8 +58,8 @@
           <h1>Profesional Art Printing Data</h1>
           <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
           <ul>
-            <li class="list-area area-1">html</li>
-            <li class="list-area area-2">bootstrap</li>
+            <li class="list-area area-1">HTML</li>
+            <li class="list-area area-2">Bootstrap</li>
             <li class="list-area area-3">Ruby</li>
           </ul>
           <a tabindex="0" class="large-btn-area btn" href="#">See Project</a>
@@ -70,8 +70,8 @@
           <h1>Profesional Art Printing Data</h1>
           <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
           <ul>
-            <li class="list-area area-1">html</li>
-            <li class="list-area area-2">bootstrap</li>
+            <li class="list-area area-1">HTML</li>
+            <li class="list-area area-2">Bootstrap</li>
             <li class="list-area area-3">Ruby</li>
           </ul>
           <a tabindex="0" class="large-btn-area btn" href="#">See Project</a>
@@ -82,8 +82,8 @@
           <h1>Profesional Art Printing Data</h1>
           <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
           <ul>
-            <li class="list-area area-1">html</li>
-            <li class="list-area area-2">bootstrap</li>
+            <li class="list-area area-1">HTML</li>
+            <li class="list-area area-2">Bootstrap</li>
             <li class="list-area area-3">Ruby</li>
           </ul>
           <a tabindex="0" class="large-btn-area btn" href="#">See Project</a>
@@ -94,8 +94,8 @@
           <h1>Profesional Art Printing Data</h1>
           <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
           <ul>
-            <li class="list-area area-1">html</li>
-            <li class="list-area area-2">bootstrap</li>
+            <li class="list-area area-1">HTML</li>
+            <li class="list-area area-2">Bootstrap</li>
             <li class="list-area area-3">Ruby</li>
           </ul>
           <a tabindex="0" class="large-btn-area btn" href="#">See Project</a>
@@ -106,8 +106,8 @@
           <h1>Profesional Art Printing Data</h1>
           <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
           <ul>
-            <li class="list-area area-1">html</li>
-            <li class="list-area area-2">bootstrap</li>
+            <li class="list-area area-1">HTML</li>
+            <li class="list-area area-2">Bootstrap</li>
             <li class="list-area area-3">Ruby</li>
           </ul>
           <a tabindex="0" class="large-btn-area btn" href="#">See Project</a>
