Add button styling on action

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <li class="area-2">HTML</li>
             <li class="area-3">Bootstrap</li>
             <li class="area-4">Ruby</li>
-            <li class="btn-area"><a tabindex="0" href="#" class="btn">See Project</a></li>
+            <a tabindex="0" href="#" class="btn-action btn-area btn">See Project</a>
           </ul>
         </div>
       </div>
@@ -62,7 +62,7 @@
             <li class="list-area area-2">Bootstrap</li>
             <li class="list-area area-3">Ruby</li>
           </ul>
-          <a tabindex="0" class="large-btn-area btn" href="#">See Project</a>
+          <a tabindex="0" class="btn-action large-btn-area btn" href="#">See Project</a>
         </div>
       </div>
       <div class="project-box" id="project-1">
@@ -74,7 +74,7 @@
             <li class="list-area area-2">Bootstrap</li>
             <li class="list-area area-3">Ruby</li>
           </ul>
-          <a tabindex="0" class="large-btn-area btn" href="#">See Project</a>
+          <a tabindex="0" class="btn-action large-btn-area btn" href="#">See Project</a>
         </div>
       </div>
       <div class="project-box" id="project-2">
@@ -86,7 +86,7 @@
             <li class="list-area area-2">Bootstrap</li>
             <li class="list-area area-3">Ruby</li>
           </ul>
-          <a tabindex="0" class="large-btn-area btn" href="#">See Project</a>
+          <a tabindex="0" class="btn-action large-btn-area btn" href="#">See Project</a>
         </div>
       </div>
       <div class="project-box" id="project-3">
@@ -98,7 +98,7 @@
             <li class="list-area area-2">Bootstrap</li>
             <li class="list-area area-3">Ruby</li>
           </ul>
-          <a tabindex="0" class="large-btn-area btn" href="#">See Project</a>
+          <a tabindex="0" class="btn-action large-btn-area btn" href="#">See Project</a>
         </div>
       </div>
       <div class="project-box" id="project-4">
@@ -110,7 +110,7 @@
             <li class="list-area area-2">Bootstrap</li>
             <li class="list-area area-3">Ruby</li>
           </ul>
-          <a tabindex="0" class="large-btn-area btn" href="#">See Project</a>
+          <a tabindex="0" class="btn-action large-btn-area btn" href="#">See Project</a>
         </div>
       </div>
     </section>
@@ -118,7 +118,7 @@
       <div class="about_me-container">
         <h1>About me</h1>
         <p>Hello I’m a software developer! I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
-        <div class="btn-area"><a tabindex="0" class="btn" href="#">Get my resume</a></div>
+        <a tabindex="0" class="btn-action btn btn-area" href="#">Get my resume</a>
         <hr>
       </div>
       <div class="skills-section">
