--- a/index.html
+++ b/index.html
@@ -21,19 +21,17 @@
   </header>
   <main>
     <section class="headline">
-      <div class="headline-container">
-        <h1>Hey there. I'm Edu<span><h2>I'm a software developer</h2></span></h1>
-        <p>I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
-          don't hestiate to contact me.</p>
-        <div class="social-media">
-          <ul>
-            <li><a tabindex="0" class="icon-box" href="https://github.com/Xecyc"><img class="media-img" src="./img/social media icons/Icon -GitHub.svg" alt="github-icon"></a></li>
-            <li><a tabindex="0" class="icon-box" href="https://twitter.com/jesm0r"><img class="media-img" src="./img/social media icons/Icon - Twitter.svg" alt="twitter-icon"></a></li>
-            <li><a tabindex="0" class="icon-box" href="https://www.linkedin.com/in/jes%C3%BAs-moreno-b4276a178/"><img class="media-img" src="./img/social media icons/Icon - Linkedinlinkedin.svg" alt="linkedin-icon"></a></li>
-            <li><a tabindex="0"class="icon-box" href="https://medium.com/"><img class="media-img" src="./img/social media icons/Icon - Medium.svg" alt="medium-icon"></a></li>
-            <li><a tabindex="0" class="icon-box" href="https://angel.co/"><img class="media-img" src="./img/social media icons/Icon - Angelist.svg" alt="angelist-icon"></a></li>
-          </ul>
-        </div>
+      <h1>Hey there. I'm Edu.<span><h2>I'm a software developer</h2></span></h1>
+      <p>I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+        don't hestiate to contact me.</p>
+      <div class="social-media">
+        <ul>
+          <li><a tabindex="0" class="icon-box" href="https://github.com/Xecyc"><img class="media-img" src="./img/social media icons/Icon -GitHub.svg" alt="github-icon" width="24" height="24"></a></li>
+          <li><a tabindex="0" class="icon-box" href="https://twitter.com/jesm0r"><img class="media-img" src="./img/social media icons/Icon - Twitter.svg" alt="twitter-icon" width="24" height="24"></a></li>
+          <li><a tabindex="0" class="icon-box" href="https://www.linkedin.com/in/jes%C3%BAs-moreno-b4276a178/"><img class="media-img" src="./img/social media icons/Icon - Linkedinlinkedin.svg" alt="linkedin-icon" width="24" height="24"></a></li>
+          <li><a tabindex="0"class="icon-box" href="https://medium.com/"><img class="media-img" src="./img/social media icons/Icon - Medium.svg" alt="medium-icon" width="24" height="24"></a></li>
+          <li><a tabindex="0" class="icon-box" href="https://angel.co/"><img class="media-img" src="./img/social media icons/Icon - Angelist.svg" alt="angelist-icon" width="24" height="24"></a></li>
+        </ul>
       </div>
     </section>
     <section class="works-container">
@@ -154,6 +152,37 @@
           <li>Web Development</li>
         </ul>
       </div>
+    </section>
+    <section class="contact-section">
+      <p>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
+      <form action="https://formspree.io/f/xlekpvok" method="post" id="contact-form">
+        <ul>
+          <li>
+            <label for="name"></label>
+            <input type="text" id="name" name="user_name" placeholder="Full name" maxlength="30" required/>
+          </li>
+          <li>
+            <label for="mail"></label>
+            <input type="email" id="mail" name="user_email" placeholder="Email address" required/>
+          </li>
+          <li>
+            <label for="msg"></label>
+            <textarea id="msg" name="user_message" placeholder="Write me something..." maxlength="500" required></textarea>
+          </li>
+          <button class="btn large-btn-area btn-action">Get in touch</button>
+        </ul>
+      </form>
+      <footer>
+        <div class="social-media">
+          <ul>
+            <li><a tabindex="0" class="icon-box" href="https://github.com/Xecyc"><img class="media-img" src="./img/social media icons/Icon -GitHub.svg" alt="github-icon" width="24" height="24"></a></li>
+            <li><a tabindex="0" class="icon-box" href="https://twitter.com/jesm0r"><img class="media-img" src="./img/social media icons/Icon - Twitter.svg" alt="twitter-icon" width="24" height="24"></a></li>
+            <li><a tabindex="0" class="icon-box" href="https://www.linkedin.com/in/jes%C3%BAs-moreno-b4276a178/"><img class="media-img" src="./img/social media icons/Icon - Linkedinlinkedin.svg" alt="linkedin-icon" width="24" height="24"></a></li>
+            <li><a tabindex="0"class="icon-box" href="https://medium.com/"><img class="media-img" src="./img/social media icons/Icon - Medium.svg" alt="medium-icon" width="24" height="24"></a></li>
+            <li><a tabindex="0" class="icon-box" href="https://angel.co/"><img class="media-img" src="./img/social media icons/Icon - Angelist.svg" alt="angelist-icon" width="24" height="24"></a></li>
+          </ul>
+        </div>
+      </footer>
     </section>
   </main>
 </body>
