--- a/index.html
+++ b/index.html
@@ -156,17 +156,17 @@
     <section class="contact-section">
       <p>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
       <form action="https://formspree.io/f/xlekpvok" method="post" id="contact-form">
-        <ul>
-          <li>
+        <ul class="form-list">
+          <li class="name-box">
             <label for="name"></label>
             <input type="text" id="name" name="user_name" placeholder="Full name" maxlength="30" required/>
           </li>
-          <li>
+          <li class="mail-box">
             <label for="mail"></label>
             <input type="email" id="mail" name="user_email" placeholder="Email address" required/>
           </li>
           <li>
-            <label for="msg"></label>
+            <label for="msg" class="msg-box"></label>
             <textarea id="msg" name="user_message" placeholder="Write me something..." maxlength="500" required></textarea>
           </li>
           <button class="btn large-btn-area btn-action">Get in touch</button>
