--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
         <div class="languages-box">
           <ul class="languages-list">
-            <li class="area-1">CSS</li>
-            <li class="area-2">HTML</li>
-            <li class="area-3">Bootstrap</li>
-            <li class="area-4">Ruby</li>
+            <li>CSS</li>
+            <li>HTML</li>
+            <li>Bootstrap</li>
+            <li>Ruby</li>
             <a tabindex="0" href="#" class="btn-action btn-area btn">See Project</a>
           </ul>
         </div>
@@ -56,9 +56,9 @@
           <h1>Profesional Art Printing Data</h1>
           <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
           <ul>
-            <li class="list-area area-1">HTML</li>
-            <li class="list-area area-2">Bootstrap</li>
-            <li class="list-area area-3">Ruby</li>
+            <li class="list-area">HTML</li>
+            <li class="list-area">Bootstrap</li>
+            <li class="list-area">Ruby</li>
           </ul>
           <a tabindex="0" class="btn-action large-btn-area btn" href="#">See Project</a>
         </div>
@@ -68,9 +68,9 @@
           <h1>Profesional Art Printing Data</h1>
           <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
           <ul>
-            <li class="list-area area-1">HTML</li>
-            <li class="list-area area-2">Bootstrap</li>
-            <li class="list-area area-3">Ruby</li>
+            <li class="list-area">HTML</li>
+            <li class="list-area">Bootstrap</li>
+            <li class="list-area">Ruby</li>
           </ul>
           <a tabindex="0" class="btn-action large-btn-area btn" href="#">See Project</a>
         </div>
@@ -80,9 +80,9 @@
           <h1>Profesional Art Printing Data</h1>
           <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
           <ul>
-            <li class="list-area area-1">HTML</li>
-            <li class="list-area area-2">Bootstrap</li>
-            <li class="list-area area-3">Ruby</li>
+            <li class="list-area">HTML</li>
+            <li class="list-area">Bootstrap</li>
+            <li class="list-area">Ruby</li>
           </ul>
           <a tabindex="0" class="btn-action large-btn-area btn" href="#">See Project</a>
         </div>
@@ -92,9 +92,9 @@
           <h1>Profesional Art Printing Data</h1>
           <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
           <ul>
-            <li class="list-area area-1">HTML</li>
-            <li class="list-area area-2">Bootstrap</li>
-            <li class="list-area area-3">Ruby</li>
+            <li class="list-area">HTML</li>
+            <li class="list-area">Bootstrap</li>
+            <li class="list-area">Ruby</li>
           </ul>
           <a tabindex="0" class="btn-action large-btn-area btn" href="#">See Project</a>
         </div>
@@ -104,9 +104,9 @@
           <h1>Profesional Art Printing Data</h1>
           <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
           <ul>
-            <li class="list-area area-1">HTML</li>
-            <li class="list-area area-2">Bootstrap</li>
-            <li class="list-area area-3">Ruby</li>
+            <li class="list-area">HTML</li>
+            <li class="list-area">Bootstrap</li>
+            <li class="list-area">Ruby</li>
           </ul>
           <a tabindex="0" class="btn-action large-btn-area btn" href="#">See Project</a>
         </div>
@@ -155,15 +155,15 @@
     </section>
     <section class="contact-section">
       <p>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
-      <form class="contact-field-cnt" action="https://formspree.io/f/xlekpvok" method="post" id="contact-form">
-        <div class="form-list">
-          <input class="name-box" type="text" id="name" name="user_name" placeholder="Full name" maxlength="30" required/>
-          <input class="mail-box" type="email" id="mail" name="user_email" placeholder="Email address" required/>
-          <textarea class="msg-box" id="msg" name="user_message" placeholder="Write me something..." maxlength="500" required></textarea>
-          <button class="btn large-btn-area btn-action btn-submit">Get in touch</button>
-        </div>
+      <form class="contact-form" action="https://formspree.io/f/xlekpvok" method="post" id="contact-form">
+        <ul>
+          <li><input class="name-box" type="text" id="name" name="user_name" placeholder="Full name" maxlength="30" required/></li>
+          <li><input class="mail-box" type="email" id="mail" name="user_email" placeholder="Email address" required/></li>
+          <li><textarea class="msg-box" id="msg" name="user_message" placeholder="Write me something..." rows="4" cols="50" maxlength="500" required></textarea></li>
+          <li><button class="btn large-btn-area btn-action btn-submit">Get in touch</button></li>
+        </ul>
       </form>
-      <footer class="footer">
+      <footer>
         <div class="social-media">
           <ul>
             <li><a tabindex="0" class="icon-box" href="https://github.com/Xecyc"><img class="media-img" src="./img/social media icons/Icon -GitHub.svg" alt="github-icon" width="24" height="24"></a></li>
@@ -172,8 +172,6 @@
             <li><a tabindex="0"class="icon-box" href="https://medium.com/"><img class="media-img" src="./img/social media icons/Icon - Medium.svg" alt="medium-icon" width="24" height="24"></a></li>
             <li><a tabindex="0" class="icon-box" href="https://angel.co/"><img class="media-img" src="./img/social media icons/Icon - Angelist.svg" alt="angelist-icon" width="24" height="24"></a></li>
           </ul>
-        </div>
-        <div class="final-line">
         </div>
       </footer>
     </section>
