remove unnecessary ul and li tags wrapped around the input forms

--- a/index.html
+++ b/index.html
@@ -156,12 +156,10 @@
     <section class="contact-section">
       <p>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
       <form class="contact-form" action="https://formspree.io/f/xlekpvok" method="post" id="contact-form">
-        <ul>
-          <li><input class="name-box" type="text" id="name" name="user_name" placeholder="Full name" maxlength="30" required/></li>
-          <li><input class="mail-box" type="email" id="mail" name="user_email" placeholder="Email address" required/></li>
-          <li><textarea class="msg-box" id="msg" name="user_message" placeholder="Write me something..." rows="4" cols="50" maxlength="500" required></textarea></li>
-          <li><button class="btn large-btn-area btn-action btn-submit">Get in touch</button></li>
-        </ul>
+          <input class="name-box" type="text" id="name" name="user_name" placeholder="Full name" maxlength="30" required/>
+          <input class="mail-box" type="email" id="mail" name="user_email" placeholder="Email address" required/>
+          <textarea class="msg-box" id="msg" name="user_message" placeholder="Write me something..." rows="4" cols="50" maxlength="500" required></textarea>
+          <button class="btn large-btn-area btn-action btn-submit">Get in touch</button>
       </form>
       <footer>
         <div class="social-media">
