Add desktop version media queries

--- a/index.html
+++ b/index.html
@@ -14,46 +14,59 @@
   <header>
     <div class="navbar">
       <a href="#" class="brand-name">Edu</a>
-      <nav class="ham-menu">
-        <a href="#"><img tabindex="0" src="./img/Unionham.svg" alt="hamburger-menu-icon" class="ham-img"></a>
+      <nav class="nav-elements">
+        <a class="hide" href="#works">Portfolio</a>
+        <a class="hide" href="#about">About</a>
+        <a class="hide" href="#contact">Contact</a>
+        <a class="hide" href="#"><img class="mail-icon" src="./img/icon-mail.svg" alt=""></a>
+        <a class="ham-menu" href="#"><img tabindex="0" src="./img/Unionham.svg" alt="hamburger-menu-icon" class="ham-img"></a>
       </nav>
+      
     </div>
   </header>
   <main>
     <section class="headline">
-      <h1>Hey there. I'm Edu.<span><h2>I'm a software developer</h2></span></h1>
-      <p>I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
-        don't hestiate to contact me.</p>
+      <div class="headline-text">
+        <h1 class="head-h1">Hey there.<br>I'm Edu.<span><h2>I'm a software developer</h2></span></h1>
+        <p class="head-p">I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+          don't hestiate to contact me.</p>
+      </div>
       <div class="social-media">
         <ul>
-          <li><a tabindex="0" class="icon-box" href="https://github.com/Xecyc"><img class="media-img" src="./img/social media icons/Icon -GitHub.svg" alt="github-icon" width="24" height="24"></a></li>
-          <li><a tabindex="0" class="icon-box" href="https://twitter.com/jesm0r"><img class="media-img" src="./img/social media icons/Icon - Twitter.svg" alt="twitter-icon" width="24" height="24"></a></li>
-          <li><a tabindex="0" class="icon-box" href="https://www.linkedin.com/in/jes%C3%BAs-moreno-b4276a178/"><img class="media-img" src="./img/social media icons/Icon - Linkedinlinkedin.svg" alt="linkedin-icon" width="24" height="24"></a></li>
-          <li><a tabindex="0"class="icon-box" href="https://medium.com/"><img class="media-img" src="./img/social media icons/Icon - Medium.svg" alt="medium-icon" width="24" height="24"></a></li>
-          <li><a tabindex="0" class="icon-box" href="https://angel.co/"><img class="media-img" src="./img/social media icons/Icon - Angelist.svg" alt="angelist-icon" width="24" height="24"></a></li>
+          <li><a tabindex="0" class="icon-box" href="https://github.com/Xecyc"><img class="media-img" src="./img/social media icons/Icon -GitHub.svg" alt="github-icon" ></a></li>
+          <li><a tabindex="0" class="icon-box" href="https://twitter.com/jesm0r"><img class="media-img" src="./img/social media icons/Icon - Twitter.svg" alt="twitter-icon" ></a></li>
+          <li><a tabindex="0" class="icon-box" href="https://www.linkedin.com/in/jes%C3%BAs-moreno-b4276a178/"><img class="media-img" src="./img/social media icons/Icon - Linkedinlinkedin.svg" alt="linkedin-icon" ></a></li>
+          <li><a tabindex="0"class="icon-box" href="https://medium.com/"><img class="media-img" src="./img/social media icons/Icon - Medium.svg" alt="medium-icon" ></a></li>
+          <li><a tabindex="0" class="icon-box" href="https://angel.co/"><img class="media-img" src="./img/social media icons/Icon - Angelist.svg" alt="angelist-icon" ></a></li>
         </ul>
       </div>
     </section>
-    <section class="works-container">
-      <h1>My recent works</h1>
-      <hr>
-      <img class="img-placeholder" src="./img/placeholders/Img Placeholder.png" alt="placeholder-image" width="327" height="237">
-      <div class="works-stories">
-        <h1>Multi-Post Stories</h1>
-        <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
-        <div class="languages-box">
-          <ul class="languages-list">
-            <li>CSS</li>
-            <li>HTML</li>
-            <li>Bootstrap</li>
-            <li>Ruby</li>
-            <a tabindex="0" href="#" class="btn-action btn-area btn">See Project</a>
-          </ul>
+    <section class="works-container" id="works">
+      <div class="works-header-container header-area">
+        <div class="works-header">
+          <h1>My recent works</h1>
+          <div class="line"></div>
+        </div>
+        <div class="works-header-multipost">
+          <img class="img-placeholder" src="./img/placeholders/Img Placeholder.png" alt="placeholder-image">
+          <div class="works-stories">
+            <h1>Multi-Post Stories</h1>
+            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
+            <div class="languages-box">
+              <ul class="languages-list">
+                <li>CSS</li>
+                <li>HTML</li>
+                <li>Bootstrap</li>
+                <li>Ruby</li>
+                <a tabindex="0" href="#" class="btn-action btn-area btn">See Project</a>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="project-box" id="project-1">
+      <div class="project-box left" id="project-1">
         <div class="project-content">
-          <h1>Profesional Art Printing Data</h1>
+          <h1>Profesional Art<br>Printing Data</h1>
           <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
           <ul>
             <li class="list-area">HTML</li>
@@ -63,9 +76,9 @@
           <a tabindex="0" class="btn-action large-btn-area btn" href="#">See Project</a>
         </div>
       </div>
-      <div class="project-box" id="project-1">
+      <div class="project-box middle" id="project-2">
         <div class="project-content">
-          <h1>Profesional Art Printing Data</h1>
+          <h1>Profesional Art<br>Printing Data</h1>
           <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
           <ul>
             <li class="list-area">HTML</li>
@@ -75,21 +88,9 @@
           <a tabindex="0" class="btn-action large-btn-area btn" href="#">See Project</a>
         </div>
       </div>
-      <div class="project-box" id="project-2">
+      <div class="project-box right" id="project-3">
         <div class="project-content">
-          <h1>Profesional Art Printing Data</h1>
-          <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
-          <ul>
-            <li class="list-area">HTML</li>
-            <li class="list-area">Bootstrap</li>
-            <li class="list-area">Ruby</li>
-          </ul>
-          <a tabindex="0" class="btn-action large-btn-area btn" href="#">See Project</a>
-        </div>
-      </div>
-      <div class="project-box" id="project-3">
-        <div class="project-content">
-          <h1>Profesional Art Printing Data</h1>
+          <h1>Profesional Art<br>Printing Data</h1>
           <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
           <ul>
             <li class="list-area">HTML</li>
@@ -101,7 +102,31 @@
       </div>
       <div class="project-box" id="project-4">
         <div class="project-content">
-          <h1>Profesional Art Printing Data</h1>
+          <h1>Profesional Art<br>Printing Data</h1>
+          <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+          <ul>
+            <li class="list-area">HTML</li>
+            <li class="list-area">Bootstrap</li>
+            <li class="list-area">Ruby</li>
+          </ul>
+          <a tabindex="0" class="btn-action large-btn-area btn" href="#">See Project</a>
+        </div>
+      </div>
+      <div class="project-box" id="project-5">
+        <div class="project-content">
+          <h1>Profesional Art<br>Printing Data</h1>
+          <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+          <ul>
+            <li class="list-area">HTML</li>
+            <li class="list-area">Bootstrap</li>
+            <li class="list-area">Ruby</li>
+          </ul>
+          <a tabindex="0" class="btn-action large-btn-area btn" href="#">See Project</a>
+        </div>
+      </div>
+      <div class="project-box" id="project-6">
+        <div class="project-content">
+          <h1>Profesional Art<br>Printing Data</h1>
           <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
           <ul>
             <li class="list-area">HTML</li>
@@ -112,63 +137,73 @@
         </div>
       </div>
     </section>
-    <section class="about_me">
+    <section class="about_me" id="about">
       <div class="about_me-container">
-        <h1>About me</h1>
-        <p>Hello I’m a software developer! I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
-        <a tabindex="0" class="btn-action btn btn-area" href="#">Get my resume</a>
+        <div class="about_me-text">
+          <h1>About me</h1>
+          <p>Hello I’m a software developer! I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
+          <a tabindex="0" class="btn-action btn btn-area" href="#">Get my resume</a>
+        </div>
         <hr>
       </div>
       <div class="skills-section">
-        <div class="skills-header">
-          <img src="./img/skills-rectangle.svg" alt="rectangle-icon" class="shape-icon" width="18" height="18">
-          <h2>Language</h2>
+        <div class="skills-container">
+          <div class="skills-header">
+            <img src="./img/skills-rectangle.svg" alt="rectangle-icon" class="shape-icon">
+            <h2>Language</h2>
+          </div>
+          <ul class="languages">
+            <li>JavaScript</li>
+            <li>Ruby</li>
+            <li>HTML</li>
+            <li>CSS</li>
+          </ul>
         </div>
-        <ul class="languages">
-          <li>JavaScript</li>
-          <li>Ruby</li>
-          <li>HTML</li>
-          <li>CSS</li>
-        </ul>
-        <div class="skills-header">
-          <img src="./img/square.svg" alt="rectangle-icon" class="shape-icon" width="18" height="18">
-          <h2>Frameworks</h2>
+        <div class="skills-container">
+          <div class="skills-header">
+            <img src="./img/square.svg" alt="rectangle-icon" class="shape-icon">
+            <h2>Frameworks</h2>
+          </div>
+          <ul class="languages">
+            <li>React.js</li>
+            <li>Ruby on Rails</li>
+            <li>RSpec</li>
+            <li>Capybara</li>
+          </ul>
         </div>
-        <ul>
-          <li>React.js</li>
-          <li>Ruby on Rails</li>
-          <li>RSpec</li>
-          <li>Capybara</li>
-        </ul>
-        <div class="skills-header">
-          <img src="./img/circle.svg" alt="rectangle-icon" class="shape-icon" width="18" height="18">
-          <h2>Skills</h2>
+        <div class="skills-container">
+          <div class="skills-header">
+            <img src="./img/circle.svg" alt="rectangle-icon" class="shape-icon">
+            <h2>Skills</h2>
+          </div>
+          <ul class="languages">
+            <li>Database Management</li>
+            <li>Version Control</li>
+            <li>CLI</li>
+            <li>API Design</li>
+            <li>Web Development</li>
+          </ul>
         </div>
-        <ul>
-          <li>Database Management</li>
-          <li>Version Control</li>
-          <li>CLI</li>
-          <li>API Design</li>
-          <li>Web Development</li>
-        </ul>
       </div>
     </section>
-    <section class="contact-section">
-      <p>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
-      <form class="contact-form" action="https://formspree.io/f/xlekpvok" method="post" id="contact-form">
-          <input class="name-box" type="text" id="name" name="user_name" placeholder="Full name" maxlength="30" required/>
-          <input class="mail-box" type="email" id="mail" name="user_email" placeholder="Email address" required/>
-          <textarea class="msg-box" id="msg" name="user_message" placeholder="Write me something..." rows="4" cols="50" maxlength="500" required></textarea>
-          <button class="btn large-btn-area btn-action btn-submit">Get in touch</button>
-      </form>
+    <section class="contact-section" id="contact">
+      <div class="contact-form-container">
+        <p>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
+        <form class="contact-form" action="https://formspree.io/f/xlekpvok" method="post" id="contact-form">
+            <input class="name-box" type="text" id="name" name="user_name" placeholder="Full name" maxlength="30" required/>
+            <input class="mail-box" type="email" id="mail" name="user_email" placeholder="Email address" required/>
+            <textarea class="msg-box" id="msg" name="user_message" placeholder="Write me something..." rows="4" cols="50" maxlength="500" required></textarea>
+            <button class="btn large-btn-area btn-action btn-submit">Get in touch</button>
+        </form>
+      </div>
       <footer>
         <div class="social-media">
           <ul>
-            <li><a tabindex="0" class="icon-box" href="https://github.com/Xecyc"><img class="media-img" src="./img/social media icons/Icon -GitHub.svg" alt="github-icon" width="24" height="24"></a></li>
-            <li><a tabindex="0" class="icon-box" href="https://twitter.com/jesm0r"><img class="media-img" src="./img/social media icons/Icon - Twitter.svg" alt="twitter-icon" width="24" height="24"></a></li>
-            <li><a tabindex="0" class="icon-box" href="https://www.linkedin.com/in/jes%C3%BAs-moreno-b4276a178/"><img class="media-img" src="./img/social media icons/Icon - Linkedinlinkedin.svg" alt="linkedin-icon" width="24" height="24"></a></li>
-            <li><a tabindex="0"class="icon-box" href="https://medium.com/"><img class="media-img" src="./img/social media icons/Icon - Medium.svg" alt="medium-icon" width="24" height="24"></a></li>
-            <li><a tabindex="0" class="icon-box" href="https://angel.co/"><img class="media-img" src="./img/social media icons/Icon - Angelist.svg" alt="angelist-icon" width="24" height="24"></a></li>
+            <li><a tabindex="0" class="icon-box" href="https://github.com/Xecyc"><img class="media-img" src="./img/social media icons/Icon -GitHub.svg" alt="github-icon" ></a></li>
+            <li><a tabindex="0" class="icon-box" href="https://twitter.com/jesm0r"><img class="media-img" src="./img/social media icons/Icon - Twitter.svg" alt="twitter-icon" ></a></li>
+            <li><a tabindex="0" class="icon-box" href="https://www.linkedin.com/in/jes%C3%BAs-moreno-b4276a178/"><img class="media-img" src="./img/social media icons/Icon - Linkedinlinkedin.svg" alt="linkedin-icon" ></a></li>
+            <li><a tabindex="0"class="icon-box" href="https://medium.com/"><img class="media-img" src="./img/social media icons/Icon - Medium.svg" alt="medium-icon" ></a></li>
+            <li><a tabindex="0" class="icon-box" href="https://angel.co/"><img class="media-img" src="./img/social media icons/Icon - Angelist.svg" alt="angelist-icon" ></a></li>
           </ul>
         </div>
       </footer>
