--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <p>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
         <form class="contact-form" action="https://formspree.io/f/xlekpvok" method="post" id="contact-form">
             <input class="name-box" type="text" id="name" name="user_name" placeholder="Full name" maxlength="30" required/>
-            <input class="mail-box" type="email" id="mail" name="user_email" placeholder="Email address" required/>
+            <input class="mail-box" type="email" id="email" name="user_email" placeholder="Email address" required/>
             <textarea class="msg-box" id="msg" name="user_message" placeholder="Write me something..." rows="4" cols="50" maxlength="500" required></textarea>
             <button class="btn large-btn-area btn-action btn-submit">Get in touch</button>
         </form>
@@ -235,6 +235,7 @@
     </section>
   </main>
   <script src="./scripts/ham-menu.js"></script>
+  <script src="./scripts/validation-form.js"></script>
   <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script> -->
 </body>
 </html>
