Replace alert() action with html text for the email validation error message

--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
         <form class="contact-form" action="https://formspree.io/f/xlekpvok" method="post" id="contact-form">
             <input class="name-box" type="text" id="name" name="user_name" placeholder="Full name" maxlength="30" required/>
             <input class="mail-box" type="email" id="email" name="user_email" placeholder="Email address" required/>
+            <span class="error"></span>
             <textarea class="msg-box" id="msg" name="user_message" placeholder="Write me something..." rows="4" cols="50" maxlength="500" required></textarea>
             <button class="btn large-btn-area btn-action btn-submit">Get in touch</button>
         </form>
